<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/foto"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:fontFamily="@font/poppins_semi_bold"
        style="@style/TextColor.Header"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="38dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins_reg"
        android:gravity="center"
        android:layout_marginTop="5dp"
        style="@style/TextColor.Body"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="28dp"
        android:elevation="0dp"
        app:cardElevation="0dp"
        style="@style/CardBackgrund">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:fontFamily="@font/poppins_reg"
            style="@style/TextColor.Body"
            android:paddingHorizontal="22dp"
            android:paddingVertical="20dp"
            />

    </androidx.cardview.widget.CardView>


</LinearLayout>